# banca_de_codigo_uerj

./: .gitignore  ANOTACOES.md  CMakeLists.txt  README.md  a.c  a.py  b.c  c.c  d.c  e.c  f.c  g.c  h.c  i.c  x.c  z.c
include/: project.h
include/config/: config.h
include/estruturas/fila/fixa/linear/: estrutura.h  macros.h  menu.h
include/estruturas/fila_dinamica_linear_fixa/: estrutura.h  macros.h  menu.h
include/estruturas/fila_estatica_linear/: estrutura.h  macros.h  menu.h
include/estruturas/pilha/fixa/linear/: estrutura.h  macros.h  menu.h
include/estruturas/pilha_dinamica_linear_fixa/: estrutura.h  macros.h  menu.h
include/internal/: cli.h  menus.h
include/internal/GUI/: gui.h
include/internal/ementa_interativa/: ementa_interativa.h
proof_of_concept/: main.c  tmp.c
scripts/: build.sh  run.sh  sanatizecheck.sh  setup.sh
src/: CMakeLists.txt  main.c
src/estruturas/fila/fixa/linear/: estrutura.c  menu.c
src/estruturas/fila_dinamica_linear_fixa/: estrutura.c  menu.c
src/estruturas/fila_estatica_linear/: estrutura.c  menu.c
src/estruturas/pilha/fixa/linear/: estrutura.c  menu.c
src/estruturas/pilha_dinamica_linear_fixa/: estrutura.c  menu.c
src/internal/cli/: cli.c
src/internal/ementa_interativa/: ementa_interativa.c
src/internal/gui/: gui.c
src/internal/menus/: main_menu.c
